--- a/frontend/src/app/pages/lista-container/lista-container.component.css
+++ b/frontend/src/app/pages/lista-container/lista-container.component.css
@@ -33,7 +33,7 @@ td:nth-child(2)
 
 td:nth-child(3)
 {
-  width: 20%;
+  width: 10%;
 }
 
 td:nth-child(4)
@@ -46,3 +46,17 @@ td:nth-child(5)
   width: 15%;
 }
 
+td:nth-child(6)
+{
+  width: 5%;
+}
+
+td:nth-child(7)
+{
+  width: 5%;
+}
+
+td:nth-child(8)
+{
+  width: 5%;
+}
