--- a/frontend/src/app/pages/lista-container/lista-container.component.css
+++ b/frontend/src/app/pages/lista-container/lista-container.component.css
@@ -45,7 +45,7 @@ td:nth-child(5)
 {
   width: 15%;
 }
-
+/*
 td:nth-child(6)
 {
   width: 5%;
@@ -59,4 +59,4 @@ td:nth-child(7)
 td:nth-child(8)
 {
   width: 5%;
-}
+} */
