--- a/frontend/src/app/pages/lista-container/lista-container.component.html
+++ b/frontend/src/app/pages/lista-container/lista-container.component.html
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="editar">
           <th mat-header-cell *matHeaderCellDef>  </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button class="button_edit" (click)="redirectToDetails(element)">
+            <button mat-icon-button class="button_edit" (click)="redirectToEdit(element)">
                 <mat-icon class="mat-18">edit</mat-icon>
             </button>
           </td>
@@ -52,7 +52,7 @@
       <ng-container matColumnDef="movimentacao">
         <th mat-header-cell *matHeaderCellDef>  </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="button_edit" (click)="redirectToAdd(element)">
+          <button mat-icon-button class="button_edit" (click)="redirectToDetails(element)">
               <mat-icon class="mat-18">list</mat-icon>
           </button>
         </td>
@@ -67,19 +67,5 @@
     </mat-paginator>
 
   </div><!--div tabela -->
-
-
-  <div class="my-5 relatorios d-flex flex-column align-items-center justify-content-center">
-
-    <h3>Relatório Total de Exportações e Importações</h3>
-
-
-    <div class="">
-
-      <h4>Total exportações : {{ TotalExportacoes }} </h4>
-      <h4>Total importações : {{ TotalImportacoes }} </h4>
-
-    </div>
-  </div>
 
 </div>
