--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -15,6 +15,11 @@
           <li><a class="dropdown-item" routerLink="/lista-containers">Lista Containers</a></li>
         </ul>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/">Relatório</a>
+      </li>
+
     </div>
   </div>
 </nav>
