--- a/frontend/src/app/pages/formulario-movimentacao/formulario-movimentacao.component.html
+++ b/frontend/src/app/pages/formulario-movimentacao/formulario-movimentacao.component.html
@@ -25,7 +25,7 @@
 
       <div class="form-group width-70">
         <label>Data Inicio</label>
-        <input type="date" formControlName="dataInicio" class="form-control">
+        <input type="datetime-local" formControlName="dataInicio" class="form-control">
       </div>
 
     </div>
@@ -34,7 +34,7 @@
 
       <div class="form-group width-70">
         <label>Data Fim</label>
-        <input type="date" formControlName="dataFim" class="form-control">
+        <input type="datetime-local" formControlName="dataFim" class="form-control">
       </div>
 
     </div>
