--- a/frontend/src/app/pages/lista-container/lista-container.component.html
+++ b/frontend/src/app/pages/lista-container/lista-container.component.html
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="editar">
           <th mat-header-cell *matHeaderCellDef>  </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button class="button_edit" (click)="redirectToEdit(element)">
+            <button mat-icon-button class="button_table" (click)="redirectToEdit(element)">
                 <mat-icon class="mat-18">edit</mat-icon>
             </button>
           </td>
@@ -43,7 +43,7 @@
       <ng-container matColumnDef="addMovimentacao">
         <th mat-header-cell *matHeaderCellDef>  </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="button_edit" (click)="redirectToAdd(element.id)">
+          <button mat-icon-button class="button_table" (click)="redirectToAdd(element.id)">
               <mat-icon class="mat-18">add</mat-icon>
           </button>
         </td>
@@ -52,8 +52,17 @@
       <ng-container matColumnDef="movimentacao">
         <th mat-header-cell *matHeaderCellDef>  </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="button_edit" (click)="redirectToDetails(element)">
+          <button mat-icon-button class="button_table" (click)="redirectToDetails(element)">
               <mat-icon class="mat-18">list</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button class="button_table" (click)="deleteContainer(element.id)">
+              <mat-icon class="mat-18">delete</mat-icon>
           </button>
         </td>
       </ng-container>
